posts loading names, date added, profile improvements
