# social-site-frontend/src/app/api/social/models.ts
@@ -1,2 +1,3 @@
 export { NewPostDto } from './models/new-post-dto';
 export { PostDto } from './models/post-dto';
+export { UserDetailsDto } from './models/user-details-dto';
