# social-site-frontend/src/app/api/social/models/user-details-dto.ts
@@ -1,0 +1,9 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface UserDetailsDto {
+  email: string;
+  firstname: string;
+  id: number;
+  lastname: string;
+  username: string;
+}
